<?xml version="1.0" encoding="utf-8"?>
<!-- 全键盘-26-字母 -->
<Keyboard
    bg_res="@drawable/main_bg"
    key_bg_res="@drawable/key_bg_rectangle"
    key_height="100dp"
    key_left_padding="10dp"
    key_select_res="@drawable/white_light_10"
    key_text_color="#b8bbbf"
    key_text_size="60dp"
    key_top_padding="10dp"
    key_width="100dp"
    left_right_move="true"
    qwerty="true"
    qwerty_uppercase="false"
    start_pos_x="240dp"
    start_pos_y="20dp"
    top_bottom_move="false" >

    <!-- 第一行 -->
    <row>
        <keys
            codes="45|51|33|46|48|53|49|37|43|44"
            labels="Q|W|E|R|T|Y|U|I|O|P"
            splitter="|" />
        <!-- 删除 -->
        <key
            key_code="@string/keycode_del"
            key_icon="@drawable/delete" />
        <!-- 返回-退出输入法 -->
        <key
            key_code="@string/keycode_back"
            key_icon="@drawable/quit_skb" />
    </row>

    <!-- 第二行 -->
    <row>

        <!-- 切换到数字键盘 -->

        <keys
            codes="29|47|32|34|35|36|38|39|40"
            labels="A|S|D|F|G|H|J|K|L"
            splitter="|" />

        <key
            key_icon="@drawable/dou_hao_e"
            key_label="," />
        <key
            key_icon="@drawable/ju_hao_e"
            key_label="." />
        <!-- 回车 -->
        <key
            key_code="@string/keycode_center"
            key_icon="@drawable/g_search_icon"
            key_height="210dp"
            key_text_size="30dp" />
    </row>

    <!-- 第三行 -->
    <row
        key_bottom_padding="30dp">
        <keys
            codes="54|52|31|50"
            labels="Z|X|C|V"
            splitter="|" />
        <!-- 空格 -->
        <key
            key_code="@string/keycode_space"
            key_icon="@drawable/kongge"
            key_width="210dp" />

        <keys
            codes="30|42|41"
            labels="B|N|M"
            splitter="|" />
        
        <key
            key_code="@string/keycode_left"
            key_icon="@drawable/key_move_left"/>
         <key
             key_icon="@drawable/key_move_right"
             key_code="@string/keycode_right"/>
    </row>

</Keyboard>