<?xml version="1.0" encoding="utf-8"?>
<!-- 全键盘-26-字母 -->
<Keyboard
    bg_res="@drawable/main_bg"
    key_bg_res="@drawable/key_bg_rectangle"
    key_height="600dp"
    key_left_padding="10dp"
    key_press_res="@drawable/softkey_bg_press2"
    key_select_res="@drawable/softkey_bg_select2"
    key_text_color="#b8bbbf"
    key_text_size="60dp"
    key_top_padding="10dp"
    key_width="600dp"
    start_pos_x="240dp"
    start_pos_y="20dp" >

    <!-- 第一行 -->
    <row>
        <keys
            codes="8|9|10|11|12|13|14|15|16|7"
            labels="1|2|3|4|5|6|7|8|9|0"
            splitter="|" />

        <key
            key_icon="@drawable/ju_hao_e"
            key_label="." />
        <!-- 删除 -->
        <key
            key_code="67"
            key_icon="@drawable/delete" />
        <!-- 退出 -->
        <key
            key_code="4"
            key_icon="@drawable/quit_skb" />
    </row>

    <!-- 第二行 -->
    <row>

        <key
            key_code="1234"
            key_label="abc"
            key_text_size="40dp" />
        <key key_label="，" />
        <key key_label="。"  />
        <key key_label="!" />
        <key key_label="\?" />
        <key key_label=":" />
        <key key_label=";" />
        <key key_label="&quot;" />
        <key key_label="&quot;" />
        <key key_label="*" />
        <key key_label="(" />
        <key key_label=")" />
        <!-- 回车 -->
         <key
            key_code="@string/keycode_center"
            key_icon="@drawable/g_search_icon"
            key_height="210dp"
            key_text_size="30dp" />
    </row>

    <!-- 第三行 -->
    <row key_bottom_padding="30dp" >
        <key
            key_code="110"
            key_label="翻页"
            key_text_size="30dp" />
        
        <key
            key_label=".com"
            key_text_size="30dp" />
        <key
            key_label=".CN"
            key_text_size="30dp" />
        <key
            key_label="www."
            key_text_size="30dp" />
        <key key_label="/" />
        <!-- 空格 -->
        <key
            key_code="@string/keycode_space"
            key_icon="@drawable/kongge"
            key_width="210dp" />

        <key key_label="`" />
        <key key_label="~" />
        <key key_label="..." />
        <!-- 光标向左移动 -->
        <key
            key_code="@string/keycode_left"
            key_icon="@drawable/key_move_left"/>
        <!-- 光标向右移动 -->
        <key
            key_code="@string/keycode_right"
            key_icon="@drawable/key_move_right" />
    </row>

</Keyboard>